src/objects/Action__c.object
<CustomObject>
    <description>Object to create update field or send email actions.</description>
    <fields>
        <fullName>Assign_To__c</fullName>
        <label>Assign To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Task__c</fullName>
        <description>Master detail relationship to an Auto Task</description>
        <label>Auto Task</label>
        <referenceTo>Auto_Task__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_To_Update_API_Name__c</fullName>
        <description>To store API name of field to update.</description>
        <label>Field To Update API Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_To_Update__c</fullName>
        <description>Field to update when auto task is ran.</description>
        <label>Field To Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layout__c</fullName>
        <description>Layout Name</description>
        <label>Layout</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <description>New field value for field update.</description>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Object for which field will be updated.</description>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_s_Email_Address__c</fullName>
        <description>Email address of recipient</description>
        <inlineHelpText>If not a survey and need more than one email address, separate with semicolon. (Ex. test@email.com;test2@email.com)</inlineHelpText>
        <label>Recipient&apos;s Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>To store record type name</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email_From__c</fullName>
        <description>Organization wide email address from where email will be sent from.</description>
        <label>Send Email From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email_To__c</fullName>
        <description>Person to whom email will be sent to.</description>
        <label>Send Email To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case Creator</fullName>
                </value>
                <value>
                    <fullName>Case Owner</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Survey_To__c</fullName>
        <label>Send Survey To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case Creator</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <description>Name of survey to send.</description>
        <label>Survey Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <description>Name of template that will be used to send email.</description>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <recordTypes>
        <fullName>Send_Email_Action</fullName>
        <active>true</active>
        <description>Record type used to create a send email action</description>
        <label>Send Email Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Send_Survey_Action</fullName>
        <active>true</active>
        <description>Record type used to create a send survey action</description>
        <label>Send Survey Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Update_Field_Action</fullName>
        <active>true</active>
        <description>Record type used to create an update field action</description>
        <label>Update Field Action</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>